# pyasiaph-2026

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json  pyproject.toml  render.yaml
config/: environment.py  settings.py  urls.py  wsgi.py
config/static/css/: pycon.css
config/templates/: base.html  footer-slim.html  footer.html  navbar.html  socials.html
data/: homepage_content.json
pyasiaph/content/: apps.py
pyasiaph/content/migrations/: 0001_initial.py
pyasiaph/content/templates/content/: _navbar-mobile.html
pyasiaph/home/: models.py
pyasiaph/home/management/commands/: setup_default_site.py
pyasiaph/home/migrations/: 0001_initial.py
pyasiaph/home/templates/home/: _expect.html  _nav.html  _venue.html  _what_is_pycon.html  home_page.html
pyasiaph/presentations/: apps.py
pyasiaph/presentations/migrations/: 0001_initial.py
pyasiaph/sponsors/: apps.py
pyasiaph/sponsors/migrations/: 0001_initial.py
services/: pretalx.py
